Fixed spacing on small displays

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,17 +1,15 @@
-.App {
-  min-height: 100svh; /* Small viewport height */
-  max-width: 100vw;   /* Prevent horizontal scrolling */
-  display: flex;      /* Use flexbox for vertical alignment if needed */
-  flex-direction: column;
-  background: var(--primary); /* Background color or gradient */
-}
+body {
+  /* Background gradient */
+  background: var(--primary);
 
-.hero {
-  display: grid;
-  grid-template-columns: repeat(10, 1fr);
-  grid-template-rows: repeat(1, 1fr);
-  flex-grow: 1;       /* Allow .hero to grow and fill remaining space */
-  height: 100%;       /* Ensure it matches the parent's height */
+  /* Prevent repeating */
+  background-repeat: no-repeat;
+
+  /* Ensure it covers the entire screen */
+  background-size: cover;
+
+  /* Optional: fix position */
+  background-attachment: fixed;
 }
 
 .profile {
@@ -20,7 +18,7 @@
   margin-right: 1rem;
   justify-content: right;
   grid-column: 7;
-  height: 80%;        /* Adjust this to fit the desired layout */
+  height: 80%; /* Adjust this to fit the desired layout */
 }
 
 .intro {
@@ -28,7 +26,7 @@
   color: var(--text);
   background-color: rgba(0, 0, 0, 0.5);
   padding: 1rem;
-  grid-column: 1 / -1;
+  grid-column: 1 / span 11;
 }
 
 .intro img {
@@ -47,26 +45,4 @@ a:visited {
 
 a:focus {
   outline: none; /* Remove the outline after focus */
-}
-
-/* Styles for small devices (mobile phones) */
-@media (max-width: 576px) {
-  .intro {
-    flex-wrap: wrap;
-  }
-
-  .intro img {
-    height: 50%;
-    overflow: hidden;
-  }
-}
-
-/* Styles for medium devices (tablets) */
-@media (min-width: 577px) and (max-width: 768px) {
-  /* Add styles for tablets here */
-}
-
-/* Styles for large devices (desktops) */
-@media (min-width: 769px) {
-  /* Add styles for desktops here */
 }
